--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: Cedric Chee
+bio: The man behind the code
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: Cedric Chee is a full stack software engineer at Vintedge working with the Web and Mobile App team. He is founder of Trinine and author of open-source projects.
 
 # if it's an external image, update below for true
 # better with square images
@@ -16,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://koppl.in/indigo
+url: https://cedrickchee.github.io/indigo
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
@@ -34,36 +34,30 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+facebook: cedrickchee
+twitter: cedric_chee
 # google: mygoogle
-# instagram: myinstagram
-# pinterest: mypinterest
-# linkedin: mylinkedin
+instagram: cedrickchee
+pinterest: cedrickchee
+linkedin: cedricchee
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: cedrickchee
 # lastfm: mylastfm
-# stackoverflow: 7044681/mystackoverflow
-# quora: userquora
-# reddit: username
-medium: medium
+stackoverflow: 206570/cedrickchee
+quora: cedric-chee
+reddit: cedrickchee
+medium: cedric_chee
 # vimeo: myvimeo
 email: myemail@gmail.com
 
 authors:
-    johndoe:
-        name: John Doe
-        bio: A Man who travels the world eating noodles
+    cedrickchee:
+        name: Cedric Chee
+        bio: The man behind the code
         external-image: false
         picture: assets/images/profile.jpg
-        twitter: johndoe
-    jamesfoster:
-        name: James Foster
-        bio: A Man who develops software with coffee
-        external-image: false
-        picture: assets/images/james.jpg
-        twitter: jamesfoster
+        twitter: cedric_chee
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
