--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://cedrickchee.github.io/indigo
+url: https://obneo.xyz
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
