--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
 name: Cedric Chee
-bio: Hi, I'm a full stack software engineer at Vintedge and founder of Trinine.
+bio: Full stack software engineer
 
 # twitter summary info
-description: Cedric Chee is a full stack software engineer at Vintedge and founder of Trinine. He helps companies build web and mobile apps in JavaScript, React, Webpack, Node.js, Android & others.
+description: Cedric Chee is a full stack software engineer. He helps companies build web and mobile apps in JavaScript, React, Webpack, Node.js, Android & others.
 
 repository: cedrickchee/personal-website
 
@@ -43,15 +43,15 @@ medium: cedric_chee
 google: CedricChee
 stackoverflow: 206570/cedrickchee
 quora: cedric-chee
-instagram: cedrickchee
-pinterest: cedrickchee
+# instagram: cedrickchee
+# pinterest: cedrickchee
 # youtube: myyoutube
 # spotify: myspotify
 # lastfm: mylastfm
-reddit: cedrickchee
-vimeo: cedrickchee
+# reddit: cedrickchee
+# vimeo: cedrickchee
 facebook: cedrickchee
-email: c@obneo.xyz
+email: cedric+site@invictusbyte.com
 
 authors:
     cedrickchee:
@@ -64,7 +64,7 @@ authors:
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
 # normal = 560px / large = 810px
-width: normal
+width: large
 
 # if you don't need pagination, comment the *paginate* configs below
 # paginate: 5
