--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
 name: Cedric Chee
-bio: Full stack software engineer at Vintedge and started Trinine, an open science project.
+bio: Full stack software engineer at Vintedge and founder of Trinine.
 
 # twitter summary info
-description: Cedric Chee is a full stack software engineer at Vintedge and started Trinine, an open science project. At Vintedge, he helps companies build web and mobile apps in JavaScript, React, Webpack, Node.js, Android & others.
+description: Cedric Chee is a full stack software engineer at Vintedge and founder of Trinine. At Vintedge, he helps companies build web and mobile apps in JavaScript, React, Webpack, Node.js, Android & others.
 
 repository: cedrickchee/personal-website
 
