--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
 name: Cedric Chee
-bio: Full stack software engineer at Vintedge and founder of Trinine.
+bio: Founder of Trinine. Machine Learning Engineer.
 
 # twitter summary info
-description: Cedric Chee is a full stack software engineer at Vintedge and founder of Trinine. At Vintedge, he helps companies build web and mobile apps in JavaScript, React, Webpack, Node.js, Android & others.
+description: Cedric is a founder of Trinine, currently focused on Deep Learning. Previously, he was a full stack software engineer at Vintedge. At Vintedge, he helps companies build web and mobile apps in JavaScript, React, Webpack, Node.js, Android & others.
 
 repository: cedrickchee/personal-website
 
