--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ picture: assets/images/my-profile-pic.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
-# resume: true
-# resume-external: true
-# resume-url: https://google.com/?q=cedric+chee
+resume: true
+resume-external: true
+resume-url: https://www.visualcv.com/cedricchee/
 
 url: https://cedricchee.com
 # your url: http://USERNAME.github.io
@@ -24,7 +24,7 @@ url: https://cedricchee.com
 permalink: "/:year/:month/:day/:title/"
 
 # To enable google analytics, supply your token below
-analytics-google: 'UA-98667456-1'
+analytics-google: "UA-98667456-1"
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
@@ -32,8 +32,8 @@ analytics-google: 'UA-98667456-1'
 
 # if you don't want comments in your posts, leave categories empty
 disqus:
-  shortname: cedricchee # enter this from your disqus account
-  categories: [blog, project] # only show disqus for posts that have these categories
+    shortname: cedricchee # enter this from your disqus account
+    categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 twitter: cedric_chee
@@ -99,10 +99,10 @@ lang: en-US
 branch: gh-pages
 
 gems:
-  - jekyll-seo-tag
-  - jekyll-gist
-  - jekyll-feed
-  - jemoji
+    - jekyll-seo-tag
+    - jekyll-gist
+    - jekyll-feed
+    - jemoji
 
 jekyll-mentions:
     base_url: https://github.com
