--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ url: https://cedricchee.com
 permalink: "/:year/:month/:day/:title/"
 
 # To enable google analytics, supply your token below
-analytics-google: "UA-98667456-1"
+# analytics-google: "UA-98667456-1"
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
