--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ permalink: "/:year/:month/:day/:title/"
 # if you don't want comments in your posts, leave categories empty
 disqus:
     shortname: cedricchee # enter this from your disqus account
-    categories: [blog, project] # only show disqus for posts that have these categories
+    categories: [] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
 twitter: cedric_chee
